deploy/native_resource/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tutorial-webapi
spec:
  containers:
    - name: tutorial-webapi
      image: "registry.hub.docker.com/nusgang/tutorial-webapi:develop"
      command: ['npm','start']
