deploy/native_resource/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tutorial-webapi-service
spec:
  selector:
    app: tutorial-webapi
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 3000
