deploy/native_resource/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tutorial-webapi-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '5'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '2'
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - host: "tutorial.test-us2.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tutorial-webapi-service
            port:
              number: 8080
